cambio de dependencia a auth0 y mejoras de seguridad generales