@@ -1,24 +1,24 @@
 package com.demo.app.demo_msvc_app.security.jwt.config;
 
 
-import java.security.Key;
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.stereotype.Component;
+
+import com.auth0.jwt.JWT;
+import com.auth0.jwt.JWTVerifier;
+import com.auth0.jwt.algorithms.Algorithm;
+import com.auth0.jwt.exceptions.JWTVerificationException;
+import com.auth0.jwt.interfaces.DecodedJWT;
+import com.demo.app.demo_msvc_app.exceptions.JwtException;
 import com.demo.app.demo_msvc_app.security.user.ShopUserDetails;
 
-import io.jsonwebtoken.ExpiredJwtException;
-import io.jsonwebtoken.JwtException;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.MalformedJwtException;
-import io.jsonwebtoken.SignatureAlgorithm;
-import io.jsonwebtoken.UnsupportedJwtException;
-import io.jsonwebtoken.io.Decoders;
-import io.jsonwebtoken.security.Keys;
+
 @Component
 public class JwtUtils {
 @Value("${auth.token.jwtSecret}")
@@ -30,30 +30,28 @@ private int expirationTime;
 public String createToken(Authentication authentication){
    ShopUserDetails userPrincipal = (ShopUserDetails) authentication.getPrincipal();
 
-   List <String> roles = userPrincipal.getAuthorities().stream().map(GrantedAuthority::getAuthority).toList();
+   List <String> roles = userPrincipal.getAuthorities().stream()
+   .map(GrantedAuthority::getAuthority)
+   .collect(Collectors.toList());
 
-   return Jwts.builder()
-   .setSubject(userPrincipal.getEmail())
-   .claim("id", userPrincipal.getId()) //los claims basicamente son la info del usuario que va a estar codificada dentro del token
-   .claim("roles", roles)
-   .setIssuedAt(new Date())
-   .setExpiration(new Date(new Date().getTime() + expirationTime))
-   .signWith(key(), SignatureAlgorithm.HS256).compact();
+   return JWT.create()
+   .withSubject(userPrincipal.getEmail())
+   .withClaim("id", userPrincipal.getId()) //los claims basicamente son la info del usuario que va a estar codificada dentro del token
+   .withArrayClaim("roles", roles.toArray(new String[0]))
+   .withIssuedAt(new Date())
+   .withExpiresAt(new Date(new Date().getTime() + expirationTime))
+   .sign(Algorithm.HMAC256(jwtSecret));
 
 }
 
-private Key key(){
-    return Keys.hmacShaKeyFor(Decoders.BASE64.decode(jwtSecret));
-}
+
 
 //ahora vamos a crear un metodo que va a cumplir la funcion de extrar el nombre de usuario directamente del token
 
 public String getUsernameFromToken(String token){
-    return Jwts.parserBuilder()
-    .setSigningKey(key())
-    .build()
-    .parseClaimsJws(token)
-    .getBody().getSubject();
+ DecodedJWT jwt = JWT.decode(token);
+ return jwt.getSubject();   
+
 
 }
 
@@ -61,18 +59,30 @@ public String getUsernameFromToken(String token){
 
 public boolean validateToken(String token){
 try {
-    Jwts.parserBuilder()
-.setSigningKey(key())
-.build()
-.parseClaimsJws(token);
+Algorithm algorithm = Algorithm.HMAC256(jwtSecret);
+
+JWTVerifier jwtVerifier = JWT.require(algorithm).build();
+
+jwtVerifier.verify(token);
 
 return true;
-} catch (MalformedJwtException | ExpiredJwtException | UnsupportedJwtException | IllegalArgumentException e) {
-   throw new JwtException(e.getMessage());
+} catch (JWTVerificationException e) {
+    throw new JwtException("Invalid Token, please try again");
 }
 
 }
 
+public Long getIdFromToken(String token){
+    DecodedJWT jwt = JWT.decode(token);
+
+    return jwt.getClaim("id").asLong();
+}
+
+public List <String> getRolesFromToken(String token){
+    DecodedJWT jwt = JWT.decode(token);
+
+    return jwt.getClaim("roles").asList(String.class);
+}
 
 
 
